feat: Complete implementation of Prism.js for syntax highlighting in Figma plugin
- Removed all complex code editors (Monaco, ACE, CodeMirror) and integrated Prism.js for a streamlined code display.
- Added CDN links for Prism.js and its plugins, including line numbers support and dark theme.
- Enhanced syntax highlighting with custom color schemes for various code elements.
- Implemented a fallback system to a textarea if Prism.js fails to load.
- Rewrote `ui.html` to simplify the code structure and improve maintainability.
- Created `prism-test.html` for testing Prism.js functionality, including dynamic code updates and syntax highlighting verification.
- Cleaned up `package.json` by removing unnecessary dependencies and ensuring compatibility.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Coding-art--convert-illustration-to-canvasJs-code",
+  "name": "coding-art-convert-illustration-to-canvasjs-code",
   "version": "1.0.0",
   "description": "Your Figma Plugin",
   "main": "code.js",
@@ -44,9 +44,6 @@
     }
   },
   "dependencies": {
-    "ace-builds": "^1.41.0",
-    "codemirror": "^5.65.16",
-    "monaco-editor": "^0.52.2",
-    "prismjs": "^1.30.0"
+    "canvg": "^4.0.2"
   }
 }
